# BriefBreakdown

./: .gitignore  README.md  pyproject.toml
evals/checks/: business_rules.py  coverage_check.py  llm_judge.py  schema_check.py
evals/dataset/: golden.jsonl
evals/runners/: run_evals.py
src/brief_breakdown/: __init__.py  __main__.py  cli.py  generator.py  prompts.py  schema.py  tracing.py
tests/: test_business_rules.py  test_runner.py  test_schema.py  test_tracing.py
